# uiaw

./: .gitignore  CMakeLists.txt
experimentation/: experimentation.slnx
experimentation/experimentation/: builtin_typedefs.h  dummy.cpp  enums.cpp  experimentation.cpp  experimentation.vcxproj  experimentation.vcxproj.filters  uiaw.h
experiments/: CMakeLists.txt  dummy.cpp  experiments.cpp  uiawwalk_children.cpp  uiwalk_children.cpp
prompts/: ChatGptRequest.txt  FixEnums.txt  simple_typedefs.txt  variant.txt
uiaw/: CMakeLists.txt  InternalAccessor.h  UIAutomation.cpp  UIAutomation.h  UIAutomationCondition.cpp  UIAutomationCondition.h  UIAutomationElement.cpp  UIAutomationElement.h  UIAutomationTreeWalker.cpp  UIAutomationTreeWalker.h  builtin_typedefs.cpp  enums.h  enums_private.h  result.cpp  result.h  uia_all.h  uiaw.h  utility.cpp  utility.h  variant.cpp  variant.h
